--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		]
 	},
 	"dependencies": {
+		"@lucide/svelte": "^0.487.0",
 		"@stripe/stripe-js": "^6.1.0",
 		"@vercel/analytics": "^1.5.0",
 		"lucide-svelte": "^0.486.0",
