--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@stripe/stripe-js": "^6.1.0",
 		"@vercel/analytics": "^1.5.0",
 		"lucide-svelte": "^0.486.0",
+		"nodemailer": "^6.10.0",
 		"sharp": "^0.33.5",
 		"stripe": "^17.7.0"
 	}
